# api/swagger/swagger.yaml
@@ -20,12 +20,153 @@ produces:
 x-a127-config: {}
 x-a127-services: {}
 paths:
+  /token:
+    x-swagger-router-controller: vta
+    get:
+      description: Retrieves a BaaS token given a Facebook token
+      operationId: getToken
+      parameters:
+        - name: fb_access_token
+          in: query
+          type: string
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TokenResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /rides/{tripId}:
+    x-swagger-router-controller: vta
+    get:
+      description: Retrieves a specific ride by ID
+      operationId: getRideById
+      parameters:
+        - name: tripId
+          required: true
+          type: string
+          in: path
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TokenResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /rides/{tripId}/beginsAt:
+    x-swagger-router-controller: vta
+    get:
+      description: Retrieves a stop nearest the starting point of a ride
+      operationId: getRideById
+      parameters:
+        - name: tripId
+          required: true
+          type: string
+          in: path
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TokenResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+  /rides/{tripId}/endsAt:
+    x-swagger-router-controller: vta
+    get:
+      description: Retrieves a stop nearest the ending point of a ride
+      operationId: getRideById
+      parameters:
+        - name: tripId
+          required: true
+          type: string
+          in: path
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TokenResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+  /stops:
+    x-swagger-router-controller: vta
+    x-a127-apply: {}
+    get:
+      operationId: getNearestStops
+      description: Gets the nearest stops using lat/lon and radius
+      parameters:
+        - name: access_token
+          in: header
+          description: Access Token from BaaS
+          required: true
+          type: string
+        - name: radius
+          in: query
+          description: Radius from Lat, Lon within which to search
+          required: true
+          type: string
+        - name: latitude
+          in: query
+          description: Latitude from which to search
+          required: true
+          type: string
+        - name: longitude
+          in: query
+          description: Longitude from which to search
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TripResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+  /stops/{stopId}:
+    x-swagger-router-controller: vta
+    x-a127-apply: {}
+    get:
+      operationId: getStopById
+      description: Retrieve a specific stop
+      parameters:
+        - name: stopId
+          in: path
+          description: Radius from Lat, Lon within which to search
+          required: true
+          type: string
+        - name: access_token
+          in: header
+          description: Access Token from BaaS
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TripResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /profile:
     x-swagger-router-controller: vta
     x-a127-apply: {}
     get:
       operationId: getProfile
-      description: Gets the User Profile of the logged in user
+      description: Gets the User Profile of the logged in user including the co2 savings 
       parameters:
         - name: access_token
           in: header
@@ -41,11 +182,12 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /{userId}/trips:
+
+  /users/{userId}/trips:
     x-swagger-router-controller: vta
     x-a127-apply: {}
     get:
-      operationId: getTrips
+      operationId: getRides
       description: Retrieves trips for a user
       parameters:
         - name: userId
@@ -64,6 +206,15 @@ paths:
           required: true
           type: string
       responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TripResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
     post:
       operationId: postTrip
       description: Accepts a new Trip from the app and returns
@@ -187,7 +338,7 @@ definitions:
     properties:
       userId:
         type: "string"
-      start:
+      tripBegin:
         type: "object"
         properties:
           latitude:
@@ -195,7 +346,7 @@ definitions:
           longitude:
             type: "number"
           timestamp:
-            type: "string"
+            type: "number"
         required:
           - "latitude"
           - "longitude"
@@ -211,7 +362,7 @@ definitions:
               longitude:
                 type: "number"
               timestamp:
-                type: "string"
+                type: "number"
           -
             type: "object"
             properties:
@@ -220,7 +371,7 @@ definitions:
               longitude:
                 type: "number"
               timestamp:
-                type: "string"
+                type: "number"
           -
             type: "object"
             properties:
@@ -229,8 +380,8 @@ definitions:
               longitude:
                 type: "number"
               timestamp:
-                type: "string"
-      stop:
+                type: "number"
+      tripEnd:
         type: "object"
         properties:
           latitude:
@@ -238,12 +389,27 @@ definitions:
           longitude:
             type: "number"
           timestamp:
-            type: "string"
+            type: "number"
     required:
-      - "start"
+      - "tripBegin"
       - "waypoints"
-      - "stop"
+      - "tripEnd"
   TripResponse:
+    type: "object"
+    properties:
+      savings:
+        type: "object"
+        properties:
+          co2:
+            type: "integer"
+          miles:
+            type: "number"
+        required:
+          - "co2"
+          - "miles"
+    required:
+      - "savings"
+  TokenResponse:
     type: "object"
     properties:
       savings:
